[gd_scene load_steps=8 format=3 uid="uid://dtchd3yrqrcbd"]

[ext_resource type="PackedScene" uid="uid://coi010tlbihnq" path="res://menus/PromptPanel.tscn" id="1"]
[ext_resource type="Script" path="res://menus/HBTextInput.gd" id="2"]
[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="3"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color(0.19, 0.07, 0.3, 0.75)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color(0.19, 0.07, 0.3, 0.75)
border_color = Color(0.498039, 0, 1, 0.752941)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)

[sub_resource type="StyleBoxFlat" id="3"]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color(0.19, 0.07, 0.3, 0.75)
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)

[sub_resource type="GDScript" id="4"]
script/source = "extends LineEdit

# HACKHACKHACK

signal cancel

func _gui_input(event):
	if event.is_action_pressed(\"gui_cancel\"):
		get_viewport().set_input_as_handled()
		emit_signal(\"cancel\")
"

[node name="HBConfirmationWindow" type="PanelContainer"]
offset_right = 688.0
offset_bottom = 200.0
theme = ExtResource("3")
script = ExtResource("2")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TextLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Please enter the folder's name:"

[node name="LineEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("2")
theme_override_styles/normal = SubResource("3")
script = SubResource("4")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="AcceptButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1")]
unique_name_in_owner = true
custom_minimum_size = Vector2(181, 53)
layout_mode = 2
action_name = "gui_accept"
text = "Accept"

[node name="InputGlyphRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/AcceptButton/HBoxContainer" index="0"]
action_text = "Accept"
action_name = &"gui_accept"

[node name="CancelButton" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1")]
unique_name_in_owner = true
custom_minimum_size = Vector2(177, 53)
layout_mode = 2
action_name = "gui_cancel"
text = "Cancel"

[connection signal="cancel" from="Panel/MarginContainer/VBoxContainer/LineEdit" to="." method="emit_signal"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="text_submitted" from="Panel/MarginContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]

[editable path="Panel/MarginContainer/VBoxContainer/HBoxContainer/AcceptButton"]
